fix owner login redirection bug and reservations not showing on reservations page bug

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -21,7 +21,7 @@
   margin-top: 160px;
   text-align: center;
   text-transform: uppercase;
-  color: black;
+  color: #fff;
   h4 {
     margin-left: 70px;
     margin-right: 70px;
